# ml-globalworth-hackathon-2025

./: .gitignore  README.md  Warsaw_Trade_Tower.json  Warta_Tower.json  design_conv.ipynb  inpaint.py  inpaint_mock.py  pyproject.toml  schemas.py  server.py
examples/: best_inquiry_match.ipynb  design_conv.ipynb  generate_summary_document.ipynb  inquiry_stage_1.ipynb  inquiry_stage_2.ipynb
globalworth/: playground.ipynb
notebooks/: playground.ipynb
src/globalworth/inpainting/: api.py  image_utils.py  models.py  openai.py  pipeline.py
towers/: Quattro_Business_Park.json  Warsaw_Trade_Tower.json  Warta_Tower.json
